--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
-async function generateSuperheroWithFaceLock(personaData, imageBuffer) {
-  const prompt = `
-Transform this real person into a 3D Pixar-style superhero.
-Keep exact facial structure. Only change costume.
-No text or watermark.
-`;
-
-  const form = new FormData();
-
-  form.append("model", "gpt-image-1");
-  form.append("prompt", prompt);
-  form.append("size", "1024x1024");
-
-  const blob = new Blob([imageBuffer], { type: "image/png" });
-  form.append("image", blob, "input.png");
-
-  const response = await fetch("https://api.openai.com/v1/images/edits", {
-    method: "POST",
-    headers: {
-      Authorization: `Bearer ${process.env.OPENAI_API_KEY}`,
-    },
-    body: form,
-  });
-
-  if (!response.ok) {
-    const err = await response.text();
-    console.error("OpenAI error:", err);
-    throw new Error("Image edit failed");
+{
+  "name": "shopping-persona-id-generator",
+  "version": "1.0.0",
+  "description": "AI-powered shopping persona ID card generator",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "^14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "sharp": "^0.33.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
-
-  const data = await response.json();
-  return data.data[0].url;
 }
