--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "sharp": "^0.33.4"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
